# AI-Projects

./: .gitignore  pyproject.toml
Face-Recognition/: face.py  face_recognition.ipynb  main.py
GenZ/: LLaMaZ.ipynb  dataset.txt  inference.py
GenZ/LLaMaZ_LoRA/: adapter_config.json
Write-Like-Me/: inference.py  write_like_me.ipynb
Write-Like-Me/DarkQwen_LoRA/: adapter_config.json
